# ethgen

./: Cargo.toml  README.md
_arch/: Cargo.toml
_arch/src/: encode.rs  uint.rs
_arch/src/hex/: macros.rs  serde.rs
_arch/src/rpc/: error.rs
src/: biguint.rs  encode.rs  lib.rs  uint.rs
src/encoding/: hex.rs  mod.rs
src/hex/: decode.rs  encode.rs  error.rs  hex_full.rs  macros.rs  mod.rs  serde.rs
src/rpc/: error.rs  mod.rs  req.rs  request.rs  res.rs  response.rs
