[package]
name = "ethgen"
version = "0.0.1"
description = "A toolkit to build ethereum compatible apps"
authors = ["Vitaly Tikhoplav <tikhoplavspb@gmail.com>"]
categories = ["cryptography", "encoding", "data structures", "no-std"]
keywords = ["ethers", "crypto"]
edition = "2021"

[dependencies.bytes]
version = "1.5"
default-features = false

[dependencies.faster-hex]
version = "0.8"
default-features = false

[dependencies.generic-array]
version = "1.0"
default-features = false

[dependencies.crypto-bigint]
version = "0.5.3"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dev-dependencies]
serde-json-core = { version = "0.5" }
